	* src/gui/inventorywindow.cpp, src/gui/inventorywindow.h: Removed
	redundant destructor.
	* src/resources/monsterdb.cpp: Plugged memory leak in database reader.
	* src/resources/spritedef.cpp: Plugged memory leak in sprites.
	* src/gui/quitdialog.cpp: Plugged memory leak in quit dialog.
	* src/resources/iteminfo.cpp, src/resources/iteminfo.h: Plugged memory
	leak in equipment sound.

2007-10-20  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/widgets/layout.h, src/gui/widgets/layout.cpp,
	src/Makefile.am: Added a layout handler for automatically positioning
	widgets in a window.
	* src/gui/window.h, src/gui/window.cpp: Removed garbage-collected
	container. Fixed dangling resize widget. Added layout handler.
	* src/gui/login.cpp: Fixed layout of login dialog box when native
	language is not English.
	* src/gui/playerbox.cpp: Centered sprite inside selection box.
	* src/gui/char_select.cpp: Reworked layout of dialog box.
	* src/gui/serverdialog.cpp: Converted to layout handler.

2007-10-19  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* data/equipment.xml: Removed obsolete file.
	* data/items.xml: Fixed equipment types.
	* src/item.h: Fixed invalid item ID.
	* src/gui/inventorywindow.cpp, src/gui/itemcontainer.cpp: Fixed key
	special values.
	* src/gui/itemcontainer.cpp: Reduced amount of spurious item
	deselections.
	* src/gui/itemcontainer.cpp, src/gui/itemcontainer.h: Allowed dragging
	of already selected items.
	* src/gui/buy.cpp, src/gui/sell.cpp, po/POTFILES.in: Marked buy and
	sell dialog boxes as translatable.
	* src/resources/resource.cpp, src/resources/resource.h,
	src/resources/imageset.cpp, src/resources/imageset.h: Removed mandatory
	identifier path.
	* src/resources/resourcemanager.cpp, src/resources/resourcemanager.h:
	Factored code between resource handlers.
	* src/resources/soundeffect.h, src/resources/soundeffect.cpp,
	src/resources/music.h, src/resources/music.cpp, src/resources/image.h,